[project]
name = "playground"
version = "0.1.0"
description = "A playground for various Python experiments and tests"
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "youtube-transcript-api",
    "youtube-comment-downloader",
    "beautifulsoup4",
    "feedparser",
    "pandas",
    "requests",
    "peewee",
    "psycopg2-binary",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
